// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "com/digitalasset/canton/crypto/v30/crypto.proto";

// Definitions shared by at least 2 out of mediator.proto, participant_transaction.proto and participant_transfer.proto

enum ViewType {
  VIEW_TYPE_UNSPECIFIED = 0;
  VIEW_TYPE_TRANSACTION = 1;
  VIEW_TYPE_TRANSFER_OUT = 2;
  VIEW_TYPE_TRANSFER_IN = 3;
}

message GlobalKey {
  bytes template_id = 1;
  bytes key = 2;
}

message DriverContractMetadata {
  crypto.v30.Salt contract_salt = 1;
}

message SerializableContract {
  message Metadata {
    repeated string non_maintainer_signatories = 1;
    repeated string non_signatory_stakeholders = 2;
    v30.GlobalKey key = 3; // optional: only set if contract has a key
    repeated string maintainers = 4; // optional; only set if contract has a key
  }

  string contract_id = 1;
  bytes raw_contract_instance = 2;
  Metadata metadata = 3;
  int64 ledger_create_time = 4; // in microseconds of UTC time since Unix epoch
  com.digitalasset.canton.crypto.v30.Salt contract_salt = 5; // optional
}
